# toolbox

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: monoid.hpp  segment_tree.hpp  utilities.hpp
include/utilities/: power_of_two.hpp
tests/: segment_tree.cpp
